--- a/src/Gistlyn/package.json
+++ b/src/Gistlyn/package.json
@@ -9,11 +9,15 @@
     "dependencies": {
       "bootstrap": "~3.2.0",
       "codemirror": "^5.16.0",
+      "es6-promises": "^1.0.10",
       "es6-shim": "github:es-shims/es6-shim@^0.35.0",
+      "isomorphic-fetch": "^2.2.1",
       "jquery": "^2.2.2",
       "react": "^15.0.1",
       "react-codemirror": "^0.2.6",
       "react-dom": "^15.0.1",
+      "react-redux": "^4.4.5",
+      "redux": "^3.5.2",
       "ss-utils": "^0.1.3"
     },
     "devDependencies": {
