--- a/src/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
+++ b/src/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
@@ -74,9 +74,9 @@
   <ItemGroup>
     <Compile Include="AppData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunScriptService.Embed.cs" />
     <Compile Include="RunScriptService.cs" />
-    <Compile Include="NugetService.cs" />
-    <Compile Include="NugetHelper.cs" />
+    <Compile Include="NugetUtils.cs" />
     <Compile Include="FrameworkTargetableAssembly.cs" />
     <Compile Include="CacheExtensions.cs" />
     <Compile Include="Auth\EmptyAuthProvider.cs" />
@@ -84,7 +84,7 @@
     <Compile Include="DomainWrapper.cs" />
     <Compile Include="NotifierProxy.cs" />
     <Compile Include="Auth\ScriptRunnerInfo.cs" />
-    <Compile Include="IncludeJsScriptService.cs" />
+    <Compile Include="RunScriptSupportServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
