--- a/src/Gistlyn.AppWinForms/App.config
+++ b/src/Gistlyn.AppWinForms/App.config
@@ -1,10 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
   <appSettings>
-    <add key="EnableAutoUpdate" value="false"/>
-    <add key="UpdateManagerUrl" value="{ReleaseFolderUrl}"/>
+    <add key="EnableAutoUpdate" value="false" />
+    <add key="UpdateManagerUrl" value="{ReleaseFolderUrl}" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Web.XmlTransform" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
