--- a/src/Gistlyn.AppConsole/Gistlyn.AppConsole.csproj
+++ b/src/Gistlyn.AppConsole/Gistlyn.AppConsole.csproj
@@ -110,6 +110,12 @@
   <ItemGroup>
     <EmbeddedResource Include="logo.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\lib\sqlite3.dll">
+      <Link>sqlite3.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
