--- a/src/Gistlyn.AppWinForms/Gistlyn.AppWinForms.csproj
+++ b/src/Gistlyn.AppWinForms/Gistlyn.AppWinForms.csproj
@@ -198,6 +198,10 @@
     <EmbeddedResource Include="platform.js" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\..\lib\sqlite3.dll">
+      <Link>sqlite3.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
