--- a/src/Gistlyn.Tests/packages.config
+++ b/src/Gistlyn.Tests/packages.config
@@ -5,5 +5,7 @@
   <package id="ServiceStack.Client" version="4.0.61" targetFramework="net46" />
   <package id="ServiceStack.Common" version="4.0.61" targetFramework="net46" />
   <package id="ServiceStack.Interfaces" version="4.0.61" targetFramework="net46" />
+  <package id="ServiceStack.OrmLite" version="4.0.61" targetFramework="net46" />
+  <package id="ServiceStack.OrmLite.Sqlite.Mono" version="4.0.61" targetFramework="net46" />
   <package id="ServiceStack.Text" version="4.0.61" targetFramework="net46" />
 </packages>
