--- a/src/Gistlyn.SnippetEngine/Gistlyn.SnippetEngine.csproj
+++ b/src/Gistlyn.SnippetEngine/Gistlyn.SnippetEngine.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptRunner.cs" />
     <Compile Include="GistSourceResolver.cs" />
+    <Compile Include="ScriptUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
