Add GitHub integration and change all ports to 11001 to use existing GitHub test OAuth

--- a/src/Gistlyn/Web.config
+++ b/src/Gistlyn/Web.config
@@ -4,7 +4,7 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <!--
+    <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
     The following attributes can be set on the <httpRuntime> tag.
@@ -12,33 +12,43 @@
         <httpRuntime targetFramework="4.6" />
       </system.Web>
   -->
-  <system.web>
-    <compilation debug="true" targetFramework="4.6"/>
-    <httpRuntime targetFramework="4.5"/>
-    <httpHandlers>
-      <add path="*" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*"/>
-    </httpHandlers>
-  </system.web>
-  <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <urlCompression doStaticCompression="true" doDynamicCompression="false"/>
-    <handlers>
-      <add path="*" name="ServiceStack.Factory" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified" allowPathInfo="true"/>
-    </handlers>
-    <defaultDocument>
-      <files>
-        <clear/>
-        <add value="default.html"/>
-      </files>
-    </defaultDocument>
-    <staticContent>
-      <remove fileExtension=".ts"/>
-      <mimeMap fileExtension=".ts" mimeType="application/x-typescript"/>
-      <mimeMap fileExtension=".tsx" mimeType="application/x-typescript"/>
-    </staticContent>
-  </system.webServer>
-  <appSettings>
-    <add key="webPages:Enabled" value="false"/>
-    <add key="DebugMode" value="true"/>
-  </appSettings>
+    <appSettings>
+        <add key="webPages:Enabled" value="false"/>
+        <add key="DebugMode" value="true"/>
+
+        <!-- Auth config -->
+        <add key="oauth.RedirectUrl" value="http://localhost:11001/" />
+        <!-- Should match with OAuth2's App Callback URL -->
+        <add key="oauth.CallbackUrl" value="http://localhost:11001/auth/{0}" />
+        <!--Create GitHub App at: https://github.com/settings/applications/new -->
+
+        <add key="oauth.github.Scopes" value="user" />
+        <add key="oauth.github.ClientId" value="7e8a80ab55b757e7de05" />
+        <add key="oauth.github.ClientSecret" value="122eb4d2762190d024dca6a319bc7c602ee942a2" />
+    </appSettings>
+    <system.web>
+        <compilation debug="true" targetFramework="4.6"/>
+        <httpRuntime targetFramework="4.5"/>
+        <httpHandlers>
+            <add path="*" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*"/>
+        </httpHandlers>
+    </system.web>
+    <system.webServer>
+        <validation validateIntegratedModeConfiguration="false"/>
+        <urlCompression doStaticCompression="true" doDynamicCompression="false"/>
+        <handlers>
+            <add path="*" name="ServiceStack.Factory" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified" allowPathInfo="true"/>
+        </handlers>
+        <defaultDocument>
+            <files>
+                <clear/>
+                <add value="default.html"/>
+            </files>
+        </defaultDocument>
+        <staticContent>
+            <remove fileExtension=".ts"/>
+            <mimeMap fileExtension=".ts" mimeType="application/x-typescript"/>
+            <mimeMap fileExtension=".tsx" mimeType="application/x-typescript"/>
+        </staticContent>
+    </system.webServer>
 </configuration>
