Modularize app.tsx out into different modules

--- a/src/Gistlyn/Gistlyn.csproj
+++ b/src/Gistlyn/Gistlyn.csproj
@@ -114,7 +114,9 @@
     <TypeScriptCompile Include="src\Gistlyn.dtos.ts" />
     <TypeScriptCompile Include="src\json-viewer.tsx" />
     <TypeScriptCompile Include="src\servicestack-client.ts" />
+    <TypeScriptCompile Include="src\state.ts" />
     <TypeScriptCompile Include="src\TestClient.tsx" />
+    <TypeScriptCompile Include="src\utils.ts" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\lib\sqlite3.dll">
