--- a/src/Gistlyn/Web.config
+++ b/src/Gistlyn/Web.config
@@ -22,7 +22,7 @@
         <add key="oauth.CallbackUrl" value="http://localhost:11001/auth/{0}" />
         <!--Create GitHub App at: https://github.com/settings/applications/new -->
 
-        <add key="oauth.github.Scopes" value="user" />
+        <add key="oauth.github.Scopes" value="user,gist" />
         <add key="oauth.github.ClientId" value="7e8a80ab55b757e7de05" />
         <add key="oauth.github.ClientSecret" value="122eb4d2762190d024dca6a319bc7c602ee942a2" />
     </appSettings>
