--- a/src/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
+++ b/src/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppData.cs" />
+    <Compile Include="GitHubServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunScriptService.Embed.cs" />
     <Compile Include="RunScriptService.cs" />
