--- a/src/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
+++ b/src/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StoreGist.cs" />
     <Compile Include="TestServerEvents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EvaluateSource.cs" />
