--- a/src/Gistlyn/package.json
+++ b/src/Gistlyn/package.json
@@ -17,6 +17,7 @@
       "react": "^15.0.1",
       "react-codemirror": "^0.2.6",
       "react-dom": "^15.0.1",
+      "react-ga": "^2.1.1",
       "react-redux": "^4.4.5",
       "redux": "^3.5.2",
       "ss-utils": "^0.1.3"
@@ -54,6 +55,8 @@
     "yargs": "^4.2.0"
   },
   "dependencies": {
-    "octicons": "^4.2.0"
+    "octicons": "^4.2.0",
+    "react": "^15.2.1",
+    "react-ga": "^2.1.1"
   }
 }
