Update resources after new minification

--- a/src/Gistlyn.Resources/Gistlyn.Resources.csproj
+++ b/src/Gistlyn.Resources/Gistlyn.Resources.csproj
@@ -100,15 +100,15 @@
     <EmbeddedResource Include="img\logo-32-inverted.png" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="css\app.min.css" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="css\iconfont\material-icons.css" />
     <EmbeddedResource Include="css\iconfont\MaterialIcons-Regular.svg" />
     <EmbeddedResource Include="css\octicon\octicon.css" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="img\ajax-loader.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="css\app.min.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
