--- a/src/Gistlyn.Resources/Gistlyn.Resources.csproj
+++ b/src/Gistlyn.Resources/Gistlyn.Resources.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\app.min.css" />
+    <EmbeddedResource Include="img\compiling.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
