--- a/src/Gistlyn/Gistlyn.csproj
+++ b/src/Gistlyn/Gistlyn.csproj
@@ -172,6 +172,7 @@
     <Content Include="config.js" />
     <Content Include="default.html" />
     <Content Include="img\ajax-loader.gif" />
+    <Content Include="img\compiling.png" />
     <Content Include="img\editor-bg.png" />
     <Content Include="img\logo-32-inverted.png" />
     <Content Include="platform.css" />
