Deploy console is deployed with startup scripts

--- a/src/Gistlyn.Resources/Gistlyn.Resources.csproj
+++ b/src/Gistlyn.Resources/Gistlyn.Resources.csproj
@@ -108,7 +108,7 @@
     <EmbeddedResource Include="img\ajax-loader.gif" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="css\app.min.css" />
+    <EmbeddedResource Include="css\app.min.css" />
     <EmbeddedResource Include="img\compiling.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
