Add support for Editing Gist description and link to View on Github

--- a/src/Gistlyn/Gistlyn.csproj
+++ b/src/Gistlyn/Gistlyn.csproj
@@ -153,6 +153,7 @@
     <TypeScriptCompile Include="src\Collections.tsx" />
     <TypeScriptCompile Include="src\Editor.tsx" />
     <TypeScriptCompile Include="src\AddServiceStackReferenceDialog.tsx" />
+    <TypeScriptCompile Include="src\EditGistDialog.tsx" />
     <TypeScriptCompile Include="src\ShortcutsDialog.tsx" />
     <TypeScriptCompile Include="src\SaveAsDialog.tsx" />
     <TypeScriptCompile Include="src\deps.tsx" />
