--- a/src/Gistlyn/package.json
+++ b/src/Gistlyn/package.json
@@ -12,7 +12,6 @@
       "es6-promises": "^1.0.10",
       "es6-shim": "github:es-shims/es6-shim@^0.35.0",
       "isomorphic-fetch": "^2.2.1",
-      "jquery": "^2.2.2",
       "marked": "^0.3.5",
       "octicons": "^4.2.0",
       "react": "^15.0.1",
@@ -21,7 +20,7 @@
       "react-ga": "^2.1.1",
       "react-redux": "^4.4.5",
       "redux": "^3.5.2",
-      "ss-utils": "^0.1.3"
+      "servicestack-client": "^0.0.8"
     },
     "devDependencies": {
       "jspm": "^0.16.31"
