--- a/src/Gistlyn.AppMac/Gistlyn.AppMac.csproj
+++ b/src/Gistlyn.AppMac/Gistlyn.AppMac.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>Gistlyn.AppMac</RootNamespace>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
     <AssemblyName>Gistlyn.AppMac</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,7 +36,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <LinkMode>SdkOnly</LinkMode>
+    <LinkMode>None</LinkMode>
     <Profiling>false</Profiling>
     <UseRefCounting>true</UseRefCounting>
     <UseSGen>true</UseSGen>
@@ -52,31 +53,31 @@
     <Reference Include="Gistlyn.Resources">
       <HintPath>..\..\lib\Gistlyn.Resources.dll</HintPath>
     </Reference>
-    <Reference Include="ServiceStack.Interfaces">
-      <HintPath>..\packages\ServiceStack.Interfaces.4.0.60\lib\portable-wp80+sl5+net40+win8+monotouch+monoandroid+xamarin.ios10\ServiceStack.Interfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="ServiceStack.Text">
-      <HintPath>..\packages\ServiceStack.Text.4.0.60\lib\net40\ServiceStack.Text.dll</HintPath>
-    </Reference>
-    <Reference Include="ServiceStack.Common">
-      <HintPath>..\packages\ServiceStack.Common.4.0.60\lib\net40\ServiceStack.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="ServiceStack.Client">
-      <HintPath>..\packages\ServiceStack.Client.4.0.60\lib\net40\ServiceStack.Client.dll</HintPath>
-    </Reference>
-    <Reference Include="ServiceStack">
-      <HintPath>..\packages\ServiceStack.4.0.60\lib\net40\ServiceStack.dll</HintPath>
-    </Reference>
-    <Reference Include="ServiceStack.OrmLite">
-      <HintPath>..\packages\ServiceStack.OrmLite.4.0.60\lib\net45\ServiceStack.OrmLite.dll</HintPath>
-    </Reference>
-    <Reference Include="ServiceStack.Redis">
-      <HintPath>..\packages\ServiceStack.Redis.4.0.60\lib\net40\ServiceStack.Redis.dll</HintPath>
-    </Reference>
-    <Reference Include="ServiceStack.Server">
-      <HintPath>..\packages\ServiceStack.Server.4.0.60\lib\net45\ServiceStack.Server.dll</HintPath>
-    </Reference>
 	<Reference Include="Xamarin.Mac" />
+	<Reference Include="ServiceStack.Interfaces">
+	  <HintPath>..\packages\ServiceStack.Interfaces.4.0.61\lib\portable-wp80+sl5+net40+win8+wpa81+monotouch+monoandroid+xamarin.ios10\ServiceStack.Interfaces.dll</HintPath>
+	</Reference>
+	<Reference Include="ServiceStack.Text">
+	  <HintPath>..\packages\ServiceStack.Text.4.0.61\lib\net40\ServiceStack.Text.dll</HintPath>
+	</Reference>
+	<Reference Include="ServiceStack.Client">
+	  <HintPath>..\packages\ServiceStack.Client.4.0.61\lib\net40\ServiceStack.Client.dll</HintPath>
+	</Reference>
+	<Reference Include="ServiceStack.Common">
+	  <HintPath>..\packages\ServiceStack.Common.4.0.61\lib\net40\ServiceStack.Common.dll</HintPath>
+	</Reference>
+	<Reference Include="ServiceStack">
+	  <HintPath>..\packages\ServiceStack.4.0.61\lib\net40\ServiceStack.dll</HintPath>
+	</Reference>
+	<Reference Include="ServiceStack.OrmLite">
+	  <HintPath>..\packages\ServiceStack.OrmLite.4.0.61\lib\net45\ServiceStack.OrmLite.dll</HintPath>
+	</Reference>
+	<Reference Include="ServiceStack.Redis">
+	  <HintPath>..\packages\ServiceStack.Redis.4.0.61\lib\net40\ServiceStack.Redis.dll</HintPath>
+	</Reference>
+	<Reference Include="ServiceStack.Server">
+	  <HintPath>..\packages\ServiceStack.Server.4.0.61\lib\net45\ServiceStack.Server.dll</HintPath>
+	</Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppHost.cs" />
@@ -93,8 +94,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
-    <None Include="packages.config" />
 	<None Include="platform.js" />
+	<None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainMenu.xib" />
