Add auto update config

--- a/src/Gistlyn.AppWinForms/App.config
+++ b/src/Gistlyn.AppWinForms/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
   <appSettings>
-    <add key="EnableAutoUpdate" value="false" />
-    <add key="UpdateManagerUrl" value="{ReleaseFolderUrl}" />
+    <add key="EnableAutoUpdate" value="true" />
+    <add key="UpdateManagerUrl" value="https://github.com/ServiceStack/Gistlyn" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
