--- a/src/Gistlyn/Web.config
+++ b/src/Gistlyn/Web.config
@@ -27,6 +27,8 @@
         <add key="oauth.github.ClientSecret" value="fbdd3b95497295fc0776527206c8e40159d1da6d" />
     </appSettings>
     <system.web>
+        <customErrors mode="RemoteOnly" defaultRedirect="offline.html" />
+        <authentication mode="None" /><!--mono-->
         <compilation debug="true" targetFramework="4.6"/>
         <httpRuntime targetFramework="4.5"/>
         <httpHandlers>
