--- a/src/Gistlyn/package.json
+++ b/src/Gistlyn/package.json
@@ -20,7 +20,7 @@
       "react-ga": "^2.1.1",
       "react-redux": "^4.4.5",
       "redux": "^3.5.2",
-      "servicestack-client": "^0.0.8"
+      "servicestack-client": "^0.0.10"
     },
     "devDependencies": {
       "jspm": "^0.16.31"
@@ -28,30 +28,26 @@
   },
   "devDependencies": {
     "del": "~1.1.1",
-    "event-stream": "~3.3.1",
-    "globule": "^1.0.0",
-    "grunt": "~0.4.5",
-    "grunt-exec": "~0.4.6",
-    "grunt-gulp": "~0.1.0",
-    "grunt-msbuild": "~0.2.2",
-    "grunt-nuget": "0.1.3",
-    "gulp": "~3.8.7",
-    "gulp-grunt": "~0.5.2",
-    "gulp-header": "~1.7.1",
+    "event-stream": "~3.3.2",
+    "globule": "~0.2.0",
+    "gulp": "~3.9.1",
     "gulp-htmlbuild": "~0.4.1",
     "gulp-if": "~1.2.4",
-    "gulp-minify-css": "~0.3.8",
-    "gulp-newer": "~0.3.0",
-    "gulp-nuget-pack": "0.0.7",
-    "gulp-react": "~2.0.0",
+    "gulp-jspm": "^0.5.8",
+    "gulp-clean-css": "~2.0.6",
+    "gulp-msbuild": "^0.2.21",
+    "gulp-msdeploy": "^0.0.4",
+    "gulp-newer": "~1.1.0",
+    "gulp-nuget-restore": "^0.3.1",
+    "gulp-nuget-pack": "^0.0.7",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "~0.4.0",
-    "gulp-uglify": "~1.0.1",
-    "gulp-useref": "~1.0.1",
+    "gulp-uglify": "~1.5.3",
+    "gulp-useref": "~3.0.8",
     "gulp-util": "^3.0.7",
     "jspm": "^0.16.31",
     "requirejs": "~2.1.15",
     "run-sequence": "^1.1.5",
-    "ssvs-utils": "~0.1.1",
     "yargs": "^4.2.0"
   },
   "dependencies": {
