Implement Insert Link Dialog

--- a/src/Gistlyn/Gistlyn.csproj
+++ b/src/Gistlyn/Gistlyn.csproj
@@ -154,6 +154,7 @@
     <TypeScriptCompile Include="src\app.tsx" />
     <TypeScriptCompile Include="src\Console.tsx" />
     <TypeScriptCompile Include="src\Collections.tsx" />
+    <TypeScriptCompile Include="src\InsertLinkDialog.tsx" />
     <TypeScriptCompile Include="src\ImageUploadDialog.tsx" />
     <TypeScriptCompile Include="src\TakeSnapshotDialog.tsx" />
     <TypeScriptCompile Include="src\InadequateBrowserDialog.tsx" />
