--- a/src/Gistlyn/package.json
+++ b/src/Gistlyn/package.json
@@ -17,6 +17,7 @@
       "react": "^15.0.1",
       "react-codemirror": "^0.2.6",
       "react-dom": "^15.0.1",
+      "react-dropzone": "^3.5.3",
       "react-ga": "^2.1.1",
       "react-redux": "^4.4.5",
       "redux": "^3.5.2",
